5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4153/executions/1575_579.log
== TEST (2019-03-12 12:41:33) 
-- CODE:
print("A UFAM tem 1909 anos de fundacao")
-- OUTPUT:
A UFAM tem 1909 anos de fundacao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 12:41:40) 
-- CODE:
print("A UFAM tem 1909 anos de fundacao")
-- EXECUTION TIME:
0.158284
-- TEST CASE 1:
---- input:
xxx
---- correct output:
A UFAM tem 107 anos de fundacao.
---- user output:
A UFAM tem 1909 anos de fundacao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 12:42:43) 
-- CODE:
print("A UFAM te"2016-1909 "anos de fundacao")
-- EXECUTION TIME:
0.138308
-- ERROR:
  File "/home/codebench/codes/1575/579/main.py", line 1
    print("A UFAM te"2016-1909 "anos de fundacao")
                        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 12:42:49) 
-- CODE:
print("A UFAM te"2016-1909 "anos de fundacao")
-- ERROR:
File "XXXX", line 1
    print("A UFAM te"2016-1909 "anos de fundacao")
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 12:42:53) 
-- CODE:
print("A UFAM te"2016-1909 "anos de fundacao")
-- ERROR:
File "XXXX", line 1
    print("A UFAM te"2016-1909 "anos de fundacao")
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 12:43:16) 
-- CODE:
print("A UFAM tem", 2016-1909 "anos de fundacao")
-- ERROR:
File "XXXX", line 1
    print("A UFAM tem", 2016-1909 "anos de fundacao")
                                                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 12:43:20) 
-- CODE:
print("A UFAM tem", 2016-1909 "anos de fundacao")
-- EXECUTION TIME:
0.166278
-- ERROR:
  File "/home/codebench/codes/1575/579/main.py", line 1
    print("A UFAM tem", 2016-1909 "anos de fundacao")
                                                   ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 12:43:24) 
-- CODE:
print("A UFAM tem", 2016-1909 "anos de fundacao")
-- EXECUTION TIME:
0.104366
-- ERROR:
  File "/home/codebench/codes/1575/579/main.py", line 1
    print("A UFAM tem", 2016-1909 "anos de fundacao")
                                                   ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 12:43:33) 
-- CODE:
print("A UFAM tem", 2016-1909, "anos de fundacao")
-- OUTPUT:
A UFAM tem 107 anos de fundacao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 12:43:37) 
-- CODE:
print("A UFAM tem", 2016-1909, "anos de fundacao")
-- EXECUTION TIME:
0.154785
-- TEST CASE 1:
---- input:
xxx
---- correct output:
A UFAM tem 107 anos de fundacao.
---- user output:
A UFAM tem 107 anos de fundacao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 12:43:59) 
-- CODE:
print("A UFAM tem", 2016-1909,"anos de fundacao")
-- OUTPUT:
A UFAM tem 107 anos de fundacao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 12:44:06) 
-- CODE:
print("A UFAM tem", 2016-1909,"anos de fundacao")
-- EXECUTION TIME:
0.171026
-- TEST CASE 1:
---- input:
xxx
---- correct output:
A UFAM tem 107 anos de fundacao.
---- user output:
A UFAM tem 107 anos de fundacao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 12:44:34) 
-- CODE:
print("A UFAM tem", 2016 - 1909,"anos de fundacao")
-- OUTPUT:
A UFAM tem 107 anos de fundacao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 12:44:38) 
-- CODE:
print("A UFAM tem", 2016 - 1909,"anos de fundacao")
-- EXECUTION TIME:
0.134004
-- TEST CASE 1:
---- input:
xxx
---- correct output:
A UFAM tem 107 anos de fundacao.
---- user output:
A UFAM tem 107 anos de fundacao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 12:44:45) 
-- CODE:
print("A UFAM tem", 2016 - 1909,"anos de fundacao")
-- OUTPUT:
A UFAM tem 107 anos de fundacao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 12:45:16) 
-- CODE:
print("A UFAM tem", 2016 - 1909,"anos de fundacao.")
-- EXECUTION TIME:
0.144076
-- TEST CASE 1:
---- input:
xxx
---- correct output:
A UFAM tem 107 anos de fundacao.
---- user output:
A UFAM tem 107 anos de fundacao.
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
